# Gimulator

./: .gitignore  CMakeLists.txt  CXLSHM.cpp  disable.sh  gimulator.cpp  main.cpp  write_file  write_file.cpp
archive/: GIM_data.cpp
include/: CXL_SHM.h  DMA.h  DMA.hpp  GIM_array.h  GIM_data.h  communicate.h  utills.h  utills.hpp
src/: CXLSHM.cpp  CXL_SHM.cpp  DMA.cpp  GIM_array.cpp  communicate.cpp  main.cpp
test/: test_HL_DMA.cpp  test_dma.cpp  test_gim.cpp  test_probe.cpp
